--- a/main.html
+++ b/main.html
@@ -1,16 +1,55 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <title>Majority Element Finder</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin-top: 50px;
+    }
+    input, button {
+      padding: 8px;
+      margin: 5px;
+      font-size: 16px;
+    }
+    #result {
+      margin-top: 20px;
+      font-weight: bold;
+      font-size: 18px;
+    }
+  </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-   </script>
+  <h1>Majority Element Finder</h1>
+  <p>Enter an array (comma-separated):</p>
+  <input type="text" id="arrayInput" placeholder="e.g. 2,1,2">
+  <button onclick="findMajority()">Find Majority</button>
 
+  <div id="result"></div>
+
+  <script>
+    // Boyer-Moore Voting Algorithm
+    function majorityElement(nums) {
+      let candidate = null;
+      let count = 0;
+      for (let num of nums) {
+        if (count === 0) {
+          candidate = num;
+        }
+        count += (num === candidate) ? 1 : -1;
+      }
+      return candidate;
+    }
+
+    function findMajority() {
+      const input = document.getElementById("arrayInput").value;
+      const nums = input.split(",").map(x => parseInt(x.trim(), 10));
+      const result = majorityElement(nums);
+      document.getElementById("result").innerText =
+        "Majority Element: " + result;
+    }
+  </script>
 </body>
-
 </html>
+
